clusters/dev/edge/task-api/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: redirect-to-https
  namespace: argo-task-api
  annotations:
    argocd.argoproj.io/sync-wave: "0"
spec:
  redirectScheme:
    scheme: https
    permanent: true
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: task-api-ratelimit
  namespace: argo-task-api
  annotations:
    argocd.argoproj.io/sync-wave: "0"
spec:
  rateLimit:
    average: 10
    period: 1s
    burst: 20
