clusters/dev/edge/task-api/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: task-api-http
  namespace: argo-task-api
  annotations:
    argocd.argoproj.io/sync-wave: "1"
    traefik.ingress.kubernetes.io/router.entrypoints: web
    traefik.ingress.kubernetes.io/router.middlewares: argo-task-api-redirect-to-https@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
    - host: task-api.lhrm-lab.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: argo-task-api
                port:
                  number: 8000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: task-api-https
  namespace: argo-task-api
  annotations:
    argocd.argoproj.io/sync-wave: "1"
    cert-manager.io/cluster-issuer: letsencrypt-production
    acme.cert-manager.io/http01-ingress-ingressclassname: traefik
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.middlewares: argo-task-api-task-api-ratelimit@kubernetescrd
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - task-api.lhrm-lab.com
      secretName: task-api-lhrm-lab-com-tls
  rules:
    - host: task-api.lhrm-lab.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: argo-task-api
                port:
                  number: 8000
